--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% load static %}
 
 {% block body %}
@@ -14,7 +14,7 @@
             <div class="menu-sidebar-content">
                 <div class="menu-sidebar-logo">
                     <a href="{% url 'main_home_view' %}">
-                        <img src="{% static 'images/logo/nav-logo.png' %}" alt="logo" />
+                        <img src="{% static 'images/logo/Frame.svg' %}" alt="logo" />
                     </a>
                 </div>
                 <div class="mobile-nav-menu"></div>
