--- a/templates/main/destinations.html
+++ b/templates/main/destinations.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block body %}
-
+{% load i18n %}
     <!-- Menu Sidebar Section Start -->
     <div class="menu-sidebar-area">
         <div class="menu-sidebar-wrapper">
@@ -12,7 +12,7 @@
             </div>
             <div class="menu-sidebar-content">
                 <div class="menu-sidebar-logo">
-                    <a href="{% url 'main_home_view' %}"><img src="{% static 'images/logo/nav-logo.png' %}" alt="logo"/></a>
+                    <a href="{% url 'main_home_view' %}"><img src="{% static 'images/logo/Frame.svg' %}" alt="logo"/></a>
                 </div>
                 <div class="mobile-nav-menu"></div>
                 <div class="menu-sidebar-content">
