--- a/templates/main/package_list.html
+++ b/templates/main/package_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load i18n %}
 {% block body %}
     <!-- Page Header Start -->
     <div class="page-breadcrumb-area page-bg" style="background-image: url('images/breadcrumb/tour.jpg')">
