--- a/templates/search.html
+++ b/templates/search.html
@@ -12,7 +12,7 @@
             </div>
             <div class="menu-sidebar-content">
                 <div class="menu-sidebar-logo">
-                    <a href="index.html"><img src="{% static 'images/logo/nav-logo.png' %}" alt="logo"/></a>
+                    <a href="index.html"><img src="{% static 'images/logo/Frame.svg' %}" alt="logo"/></a>
                 </div>
                 <div class="mobile-nav-menu"></div>
                 <div class="menu-sidebar-content">
