--- a/templates/user/reset_password_form.html
+++ b/templates/user/reset_password_form.html
@@ -107,11 +107,11 @@ body {
 <link rel="stylesheet" type="text/css" href="{% static 'vendors/jquery-ui/jquery-ui.min.css' %}">
 
 <div class="wrapper">
-    <div class="logo p-5 rounded-pill" style="text-align: center; background-color: #03A9F4;">
+    <div class="logo p-5 rounded-pill" style="width: 290px; height: 150px; text-align: center; background-color: #99CCFF; display: flex; justify-content: center; align-items: center;">
         <a href="{% url 'main_home_view' %}">
-            <img src="{% static 'images/img/logo-no-background.png' %}" alt="Comapny LOGO">
+            <img src="{% static 'images/logo/Frame.svg' %}" alt="Company LOGO" style="width: 250px; height: auto;">
         </a>
-    </div>
+    </div>  
     <h3>{% trans "Create a new password" %}</h3>
     <form class="p-3 mt-3 reg_form" method="POST" action="{% url 'reset_confirm' %}">
         {% csrf_token %}
