--- a/templates/base.html
+++ b/templates/base.html
@@ -170,8 +170,8 @@
                                 <span><a href="tel:+123-456-7890"><i class="fa-solid fa-phone"></i>+123-456-7890</a></span>
                             </div>
                             <div class="social-profile">
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://t.me/MarokandTravel"><i class="fab fa-telegram"></i></a>
+                                <a href="https://www.instagram.com/marokandtravel.uz/"><i class="fab fa-instagram"></i></a>
                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
                             </div>
@@ -194,7 +194,7 @@
                       <div class="footer-widget">
                           <div class="footer-widget-logo">
                               <div class="footer-logo">
-                                  <a href="{% url 'main_home_view' %}"><img src="{% static 'images/logo/footer-logo.png' %}" alt="Footer Logo"/></a>
+                                  <a href="{% url 'main_home_view' %}"><img src="{% static 'images/logo/Frame.svg' %}" alt="Footer Logo"/></a>
                               </div>
                           </div>
                       </div>
@@ -202,7 +202,7 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 ">
                       <div class="footer-widget footer-widget-info">
                           <div class="footer-widget-contact">
-                              <p class="desc">_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _</p>
+                              <p class="desc">|                                         </p>
                               <div class="footer-contact">
                                   <div class="contact-icon"><i class="fa-solid fa-location-dot"></i></div>
                                   <div class="contact-text"><span>SAMARQAND SHAHRI,TEMUR MALIK KO'CHASI,18-UY</span></div>
@@ -262,10 +262,10 @@
                           <h2 class="footer-widget-title">{% trans 'Follow us' %}</h2>
                           <div class="footer-widget-social">
                               <div class="social-profile">
-                                  <a href="https://www.facebook.com/boomdevs/"><i class="fa-brands fa-facebook-f"></i></a>
-                                  <a href="https://youtube.com/"><i class="fa-brands fa-youtube"></i></a>
-                                  <a href="https://twitter.com/boom_devs/"><i class="fa-brands fa-twitter"></i></a>
-                                  <a href="https://www.linkedin.com/company/boomdevs/"><i class="fa-brands fa-linkedin-in"></i></a>
+                                  <a href="https://t.me/MarokandTravel"><i class="fab fa-telegram"></i></a>
+                                  <a href="https://www.instagram.com/marokandtravel.uz/"><i class="fab fa-instagram"></i></a>
+                                  <a href="#"><i class="fab fa-whatsapp"></i></a>
+                                  <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                               </div>
                           </div>
                       </div>
