--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -27,8 +27,8 @@
                             <span><a href="tel:+123-456-7890"><i class="fa-solid fa-phone"></i>+123-456-7890</a></span>
                         </div>
                         <div class="social-profile">
-                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="https://t.me/MarokandTravel"><i class="fab fa-telegram"></i></a>
+                            <a href="https://www.instagram.com/marokandtravel.uz/"><i class="fab fa-instagram"></i></a>
                             <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                             <a href="#"><i class="fa-brands fa-youtube"></i></a>
                         </div>
