--- a/templates/post/blog-single.html
+++ b/templates/post/blog-single.html
@@ -69,151 +69,6 @@
                       </div>
                   </article>
                   <!-- Post Details End -->
-
-                    <!-- Post Author Start -->
-                    <div class="author-info">
-                        <div class="author-thumb">
-                            <a href="#">
-                                <img alt="author" src="{% static 'images/user/icon.webp' %}" class="avatar avatar-190 photo media-object" height="165" width="165">
-                            </a>
-                        </div>
-                        <div class="author-text">
-                            <div class="title-wrapper">
-                                <div class="title">
-                                    <h3><a href="#">Arlene McCoy</a></h3>
-                                    <span class="designation">Chief Advisor</span>
-                                </div>
-                                <div class="author-social-profiles">
-                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                                </div>
-                            </div>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id es conse quatu ea commodo con quis nostrud</p>
-                        </div>
-                    </div>
-                    <!-- Post Author End -->
-                    <!-- Comment List Start -->
-                    <div class="post-comments">
-                        <div class="blog-coment-title">
-                            <h2>111 Comments Found</h2>
-                        </div>
-                        <div class="latest-comments">
-                            <ul>
-                                <li class="comment">
-                                    <div class="comments-box">
-                                        <div class="comments-avatar">
-                                            <img src="images/user/image.jpg" alt="Commenter Author"
-                                                height="96" width="96">
-                                        </div>
-                                        <div class="comments-text">
-                                            <div class="avatar-name">
-                                                <h5><a href="#">Peter Parker</a></h5>
-                                                <span>April, 14, 2023 at 1.22 am</span>
-                                                <a href="#" class="comment-reply-link">Reply</a>
-                                            </div>
-                                            <p>Kobita  toami ki korbo re et dolore magnam aliquam quaerat volupta por incididu nt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc itation ullamco laboris nisi ut aliquip ex ea commodo</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="comment depth-1">
-                                    <div class="comments-box">
-                                        <div class="comments-avatar">
-                                            <img src="images/user/image-2.jpg" alt="Commenter Author"
-                                                height="96" width="96">
-                                        </div>
-                                        <div class="comments-text">
-                                            <div class="avatar-name">
-                                                <h5><a href="#">Peter Parker</a></h5>
-                                                <span>April, 14, 2023 at 1.22 am</span>
-                                                <a href="#" class="comment-reply-link">Reply</a>
-                                            </div>
-                                            <p>Kobita  toami ki korbo re et dolore magnam aliquam quaerat volupta por incididu nt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc itation ullamco laboris nisi ut aliquip ex ea commodo</p>
-                                        </div>
-                                    </div>
-                                    <ul class="children">
-                                        <li class="comment">
-                                            <div class="comments-box">
-                                                <div class="comments-avatar">
-                                                    <img src="images/user/image-3.jpg"
-                                                        alt="Commenter Author" height="96" width="96">
-                                                </div>
-                                                <div class="comments-text">
-                                                    <div class="avatar-name">
-                                                        <h5><a href="#">Peter Parker</a></h5>
-                                                        <span>April, 14, 2023 at 1.22 am</span>
-                                                        <a href="#" class="comment-reply-link">Reply</a>
-                                                    </div>
-                                                    <p>Kobita  toami ki korbo re et dolore magnam aliquam quaerat volupta por incididu nt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc itation ullamco laboris nisi ut aliquip ex ea commodo</p>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="comment">
-                                    <div class="comments-box">
-                                        <div class="comments-avatar">
-                                            <img src="images/user/image-5.jpg" alt="Commenter Author"
-                                                height="96" width="96">
-                                        </div>
-                                        <div class="comments-text">
-                                            <div class="avatar-name">
-                                                <h5><a href="#">Peter Parker</a></h5>
-                                                <span>April, 14, 2023 at 1.22 am</span>
-                                                <a href="#" class="comment-reply-link">Reply</a>
-                                            </div>
-                                            <p>Kobita  toami ki korbo re et dolore magnam aliquam quaerat volupta por incididu nt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc itation ullamco laboris nisi ut aliquip ex ea commodo</p>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- Comment List End -->
-
-                     <!-- Comment Form Start -->
-                    <div class="post-comments-form">
-                        <div class="post-comments-title">
-                            <h3 class="title">Leave a reply</h3>
-                        </div>
-                        <div class="comment-respond">
-                            <form action="#" method="post" class="comment-form">
-                                <div class="row g-4">
-                                    <div class="col-xl-6">
-                                        <div class="contacts-name">
-                                            <label>Full name</label>
-                                            <input name="author" type="text" placeholder="Enter your name">
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-6">
-                                        <div class="contacts-email">
-                                            <label>Email</label>
-                                            <input name="email" type="text" placeholder="Enter your email">
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <div class="contacts-message">
-                                            <label>Your comment</label>
-                                            <textarea name="comment" cols="20" rows="3"
-                                                placeholder="Enter Your Comments"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <button class="theme-btn" type="submit">
-                                            <span class="swip">
-                                                <span class="title-wrapper">
-                                                    <span class="title-1">Submit now</span>
-                                                </span>
-                                            </span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <!-- Comment Form End -->
-
-                    <!-- Post Details End -->
                 </div>
                 <!-- Blog Sidebar Start -->
                 <div class="col-lg-5 order-1 order-lg-2">
@@ -227,29 +82,6 @@
                             </form>
                             <button type="submit"><i class="icon-search"></i></button>
                         </div>
-                           <!-- Widget for Recent Tours Start -->
-                           <div class="widget widget_latest_post">
-                              <div class="widget-title-box">
-                                 <h4 class="wp-block-heading">Recent Tours</h4>
-                              </div>
-                              <ul>
-                                 
-                                 <li>
-                                    <div class="latest-post-thumb">
-                                          <img src="{{ last_three_tours.photo.url }}" alt="{{ last_three_tours.title }}" style="width: 100px; height: 100px; object-fit: cover;"/>
-                                    </div>
-                                    <div class="latest-post-desc">
-                                          <h3 class="latest-post-title">
-                                             <a href="#">{{ last_three_tours.title }}</a>
-                                          </h3>
-                                          <span class="latest-post-meta">{{ last_three_tours.created_at|date:"F j, Y" }}</span>
-                                    </div>
-                                 </li>
-                              </ul>
-                           </div>
-                           <!-- Widget for Recent Tours End -->
-
-
                         <div class="widget widget_categories">
                             <div class="widget-title-box">
                                 <h4 class="wp-block-heading">Categories</h4>
@@ -280,44 +112,13 @@
                                 <a href="{% url 'post_post_list' %}">Autumn</a>
                             </div>
                         </div>
-                        <div class="widget widget_instagram_feed">
-                            <div class="widget-title-box">
-                                <h4 class="wp-block-heading">Gallery</h4>
-                            </div>
-                            <div class="widget-instagram-feed">
-                                <div class="single-instagram-feed">
-                                    <img src="{% static 'images/blog/gallery/image-8.jpg' %}" alt="instagram photo">
-                                </div>
-                                <div class="single-instagram-feed">
-                                    <img src="{% static 'images/blog/gallery/image-9.jpg' %}" alt="instagram photo">
-                                </div>
-                                <div class="single-instagram-feed">
-                                    <img src="{% static 'images/blog/gallery/image-10.jpg' %}" alt="instagram photo">
-                                </div>
-                                <div class="single-instagram-feed">
-                                    <img src="{% static 'images/blog/gallery/image-11.jpg' %}" alt="instagram photo">
-                                </div>
-                                <div class="single-instagram-feed">
-                                    <img src="{% static 'images/blog/gallery/image-12.jpg' %}" alt="instagram photo">
-                                </div>
-                                <div class="single-instagram-feed">
-                                    <img src="{% static 'images/blog/gallery/image-13.jpg' %}" alt="instagram photo">
-                                </div>
-                                <div class="single-instagram-feed">
-                                    <img src="{% static 'images/blog/gallery/image-14.jpg' %}" alt="instagram photo">
-                                </div>
-                                <div class="single-instagram-feed">
-                                    <img src="{% static 'images/blog/gallery/image-15.jpg' %}" alt="instagram photo">
-                                </div>
-                            </div>
-                        </div>
                         <div class="widget widget_social_profile">
                             <div class="widget-title-box">
                                 <h4 class="wp-block-heading">Social</h4>
                             </div>
                             <div class="social-profile">
-                                <a class="facebook" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a class="twitter" href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://t.me/MarokandTravel"><i class="fab fa-telegram"></i></a>
+                                <a href="https://www.instagram.com/marokandtravel.uz/"><i class="fab fa-instagram"></i></a>
                                 <a class="linkedin" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                                 <a class="instagram" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                             </div>
